# stellar-events-api

./: .dockerignore  BASELINE.md  CLAUDE.md  Cargo.toml  DESIGN-q-filter.md  Dockerfile  EXPERIMENTS.md  LICENSE  Makefile  QUERY_SYNTAX.md  QUERY_SYNTAX_JSON.md  README.md  RESEARCH-query-limits.md  TEST-PLAN-q-filter.md  fly.main.toml  fly.search-queries.toml  fly.staging.toml  fly.toml
.github/workflows/: ci.yml  fly-deploy.yml
src/: db.rs  lib.rs  main.rs  sync.rs
src/api/: error.rs  home.html  mod.rs  query_parser.rs  routes.rs  schema.json  types.rs
src/ledger/: event_id.rs  events.rs  fetch.rs  mod.rs  path.rs
tests/: api_tests.rs  cold_fetch_test.rs
